--- a/journal-international.html
+++ b/journal-international.html
@@ -307,6 +307,74 @@
                 <td></td>
             </tr>
 
+            <tr>
+                <td width="35">2019</td>
+                <td>Applying deep learning models to mouse behavior recognition</td>
+                <td><a href="https://www.scirp.org/journal/paperinformation.aspx?paperid=90842" target="_blank" rel="noopener">link</a></td>
+                <td width="49">BDP</td>
+                <td></td>
+            </tr>
+            
+            <tr>
+                <td width="35">2019</td>
+                <td>Dynamic Message Puzzle as Pre-Authentication Scheme in Wireless Sensor Networks</td>
+                <td><a href="http://www.insightsociety.org/ojaseit/index.php/ijaseit/article/view/7582" target="_blank" rel="noopener">link</a></td>
+                <td width="49">FAR</td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td width="35">2019</td>
+                <td>Flipping onsets to enhance syllabification</td>
+                <td><a href="https://link.springer.com/article/10.1007/s10772-019-09649-y#:~:text=The%20proposed%20simple%20scheme%20of,to%20generalize%2010k%20unseen%20words." target="_blank" rel="noopener">link</a></td>
+                <td width="49">SUO</td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td width="35">2019</td>
+                <td>Incorporating syllabification points into a model of grapheme-to-phoneme conversion</td>
+                <td><a href="https://link.springer.com/article/10.1007/s10772-019-09619-4" target="_blank" rel="noopener">link</a></td>
+                <td width="49">SUO</td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td width="35">2019</td>
+                <td>Lightweight and DoS resistant multiuser authentication in wireless sensor networks for smart grid environments</td>
+                <td><a href="http://ieeexplore.ieee.org/document/8719907/" target="_blank" rel="noopener">link</a></td>
+                <td width="49">FAR</td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td width="35">2019</td>
+                <td>Nuclei Detection and Classification System Based On Speeded Up Robust Feature (SURF)</td>
+                <td><a href="https://emitter.pens.ac.id/index.php/emitter/article/view/288" target="_blank" rel="noopener">link</a></td>
+                <td width="49">KNR</td>
+                <td>FSV</td>
+            </tr>
+
+            <tr>
+                <td width="35">2019</td>
+                <td>PRICE PREDICTION FOR AGRICULTURAL COMMODITIES IN BANDUNG REGENCY BASED ON FUNCTIONAL LINK NEURAL NETWORK AND ARTIFICAL BEE COLONY ALGORITHMS</td>
+                <td><a href="https://thescipub.com/abstract/10.3844/jcssp.2019.1390.1395" target="_blank" rel="noopener">link</a></td>
+                <td width="49">UNW</td>
+                <td></td>
+            </tr>
+
+            <!-- Jurnal International Year 2018 -->
+
+            <tr>
+                <td width="35">2018</td>
+                <td>Indonesian Graphemic Syllabification Using a Nearest Neighbour Classifier and Recovery Procedure</td>
+                <td><a href="https://link.springer.com/article/10.1007/s10772-018-09569-3" target="_blank" rel="noopener">link</a></td>
+                <td width="49">SUO</td>
+                <td></td>
+            </tr>
+
+            
+
         </tbody>
     </table>
 
